prod-server/vpc.tf
# resource "aws_subnet" "vpc-production-0" {
#   vpc_id     = "vpc-004c8b743b19ade7f"
#   cidr_block = "10.128.1.0/24"
# }
